# zc-lex

./: CMakeLists.txt  LICENSE
inc/zc/lex/: lexer.h  token.h  token_queue.h
lazy/: create-project.py
src/: lexer.cpp  token_queue.cpp
test/: CMakeLists.txt
test/src/: token_queue.cpp
